# inker

./: .dockerignore  .gitignore  404.html  DEPLOYMENT.md  Dockerfile  README.md  catalog-info.yaml  deploy.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: copilot-instructions.md
.github/agents/: ai-blogger-agent.md  aks-deploy.md
.github/workflows/: ci.yml  docs.yml
ai_blogger/: __init__.py  __main__.py  chains.py  config.py  feedback_api.py  feedback_models.py  fetchers.py  frontend_api.py  job_api.py  job_models.py  job_store.py  metrics.py  models.py  server.py  utils.py
ai_blogger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_blogger/api/: __init__.py  app.py  dependencies.py  routes.py
ai_blogger/observability/: __init__.py  metrics.py  tracing.py
ai_blogger/persistence/: __init__.py  base.py  factory.py  models.py  postgres_storage.py  sqlite_repository.py  sqlite_storage.py
ai_blogger/queue/: __init__.py  base.py  factory.py  memory_queue.py  models.py  postgres_queue.py  redis_queue.py
api-reference/: index.html
architecture/: index.html
contributing/: index.html
developer-guide/: index.html
docs/: api-reference.md  architecture.md  contributing.md  developer-guide.md  getting-started.md  index.md  operations.md  persistence.md
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: types.ts  (+1 more)
getting-started/: index.html
k8s/: README.md  deployment.yaml  nginx.conf  oauth2-config.yaml  secretproviderclass-inker-oauth2.yaml  secrets.yaml.template  service.yaml  start.sh  virtualservice.yaml
operations/: index.html
persistence/: index.html
scripts/: validate_backstage.py
search/: search_index.json
tests/: E2E_QUICKREF.md  E2E_SUMMARY.md  E2E_TESTING.md  test_ai_blogger.py  test_e2e_integration.py  test_feedback_api.py  test_fetchers_integration.py  test_frontend_api.py  test_github_models_integration.py  test_job_api.py  test_metrics.py  test_persistence.py  test_queue.py
tests/api/: __init__.py  test_job_models.py  test_persistence.py  test_queue.py  test_routes.py
tests/features/: blog_generation.feature  blog_refinement.feature  blog_scoring.feature  hacker_news_fetcher.feature  pipeline.feature  web_search_fetcher.feature  youtube_fetcher.feature
(+16 files in other folders)
